docs/apim/4.0/reference/policy-reference/assign-metrics.md
---
description: This page provides the technical details of the Assign Metrics policy
---

# Assign Metrics

{% hint style="warning" %}
**This feature requires** [**Gravitee's Enterprise Edition**](../../overview/ee-vs-oss/README.md)**.**
{% endhint %}

## Overview

You can use the `assign-metrics` policy to push extra metrics in addition to the natively provided request metrics.

These metrics can then be used from analytics dashboards to create custom widgets and, optionally, apply aggregations based on their value.

Functional and implementation information for the `assign-metrics` policy is organized into the following sections:

* [Examples](assign-metrics.md#examples)
* [Configuration](assign-metrics.md#configuration)
* [Compatibility Matrix](assign-metrics.md#compatibility-matrix)

## Examples

{% hint style="warning" %}
This policy can be applied to v2 APIs and v4 proxy APIs. It cannot be applied to v4 message APIs.
{% endhint %}

{% tabs %}
{% tab title="Proxy API example" %}
To display your request distribution based on a particular HTTP header in your dashboards, create the custom metric shown below.

```json
"assign-metrics": {
    "metrics": [
        {
            "name": "myCustomHeader,
            "value": "{#request.headers['X-MyCustomHeader'] != null ? #request.headers['X-MyCustomHeader'][0] : null}"
        }
    ]
}
```
{% endtab %}
{% endtabs %}

## Configuration

You can enable or disable the policy with policy identifier `policy-assign-metrics`.

### Phases

The phases checked below are supported by the `assign-metrics` policy:

<table data-full-width="false"><thead><tr><th width="202">v2 Phases</th><th width="139" data-type="checkbox">Compatible?</th><th width="198">v4 Phases</th><th data-type="checkbox">Compatible?</th></tr></thead><tbody><tr><td>onRequest</td><td>true</td><td>onRequest</td><td>true</td></tr><tr><td>onResponse</td><td>true</td><td>onResponse</td><td>true</td></tr><tr><td>onRequestContent</td><td>true</td><td>onMessageRequest</td><td>false</td></tr><tr><td>onResponseContent</td><td>true</td><td>onMessageResponse</td><td>false</td></tr></tbody></table>

## Compatibility matrix

The following is the compatibility matrix for APIM and the `assign-metrics` policy:

<table data-full-width="false"><thead><tr><th>Plugin Version</th><th>Supported APIM versions</th></tr></thead><tbody><tr><td>1.x</td><td>Up to 3.1.7</td></tr><tr><td>2.x</td><td>3.18 to 3.20</td></tr><tr><td>3.x</td><td>4.0+</td></tr></tbody></table>
